--- a/reset.html
+++ b/reset.html
@@ -5,18 +5,15 @@
     <H1> Welcome to YAHUAS ONLINE MANAGEMENT SYSTEM </H1>
     <hr>
       <div class="container">
-  
+  <h3>Reset Password</h3>
     <label for="uname"><b>Username:</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
 <br>
-    <label for="psw"><b>Password:</b></label>
-    <input type="password" placeholder="Enter Password" name="password" required>
+    <label for="psw"><b>New Password:</b></label>
+    <input type="password" placeholder="Enter New Password" name="password" required>
 <br>
-    <button type="submit">Login</button>
+    <button type="submit">Reset Password</button>
     
-    <p>
-    <a href="reset.html">Reset Password </a>
-  </p>
   <hr>
         Copyright &copy; YAHUAS
   </div>
