--- a/rpt_stu_dq.html
+++ b/rpt_stu_dq.html
@@ -16,7 +16,7 @@
 <form name="addStudent", method="post" action="add_record.php">
 
 <center>
-<h2>Student details:</h2>
+<h2>Report: Students without active courses</h2>
 
 <table style="width:30%">
     <tr>
@@ -87,12 +87,16 @@
         </tr>
         <tr>
             <th>Email:</th>
-        <th><input type="text" name="next_of_kin_email" /></th>
-        <th><input type="submit"></th>
+        <th><input type="text" name="next_of_kin_email" /></th></tr>
+        <tr>
+            <th></th>
+            <th><input type="submit"></th>
         </tr>
-
 </form>
 </table>
+<hr>
+                Copyright &copy; YAHUAS || 
+                 <a href="main.html">Main Menu</a>|| <a href="logout.php?logout">Log-out</a>
 </center>
 
 
