--- a/add_student.html
+++ b/add_student.html
@@ -87,12 +87,16 @@
         </tr>
         <tr>
             <th>Email:</th>
-        <th><input type="text" name="next_of_kin_email" /></th>
-        <th><input type="submit"></th>
+        <th><input type="text" name="next_of_kin_email" /></th></tr>
+        <tr>
+            <th></th>
+            <th><input type="submit"></th>
         </tr>
-
 </form>
 </table>
+<hr>
+                Copyright &copy; YAHUAS || 
+                 <a href="main.html">Main Menu</a>|| <a href="logout.php?logout">Log-out</a>
 </center>
 
 
