--- a/add_courses.html
+++ b/add_courses.html
@@ -1,19 +1,6 @@
 <html>
-    <head>
-            <script>
-                    function ValidateEmail(mail) 
-{
- if (/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/.test(addCourse.instructor_email.value))
-  {
-    return (true)
-  }
-    alert("You have entered an invalid email address!")
-    document.addCourse.instructor_email.focus();
-    return (false)
-}
-                    </script>
-                    </head>
-                    <body>
+    <head></head>
+<body>
 
 <link rel="stylesheet" href="uni.css">
 <form name="addCourse", method="post" action="add_courses.php">
@@ -30,34 +17,14 @@
           <th>Course title:</th>
           <th><input type="text" name="course_title" /></th> 
         </tr>
-        <tr>
-          <th>Course Instructor:</th>
-          <th><input type="text" name="course_instructor" /></th> 
-        </tr>
-        <tr>
-            <th>Instructor Phone:</th>
-            <th><input type="text" name="instructor_telno" /></th>
-        </tr>
-
-        <tr>
-                <th>Instructor Email: </th>
-                <th><input type="text" name="instructor_email" /></th>
-        </tr>
+        
         <tr>
                 <th>Room Number: </th>
                 <th><input type="text" name="room_no" /></th>
                 </tr>
         <tr>
-                <th>Department Name: </th>
-                <th><input type="text" name="dept_name" /></th>
-                </tr>
-        <tr>
-                <th>Department Phone: </th>
-                <th><input type="text" name="dept_telno" /></th>
-        </tr>
-        <tr>
                 <th></th>
-                <th><input type="submit" onclick="ValidateEmail(document.addCourse.instructor_email)"></th>
+                <th><input type="submit"></th>
                 </tr>
             
 </table>
