--- a/add_staff.html
+++ b/add_staff.html
@@ -19,14 +19,11 @@
             <th>Staff Last Name: </th>
             <th><input type="text" name="staff_sname" /></th></tr>
 
-        <tr>
-            <th>Office: </th>
-            <th><input type="text" name="office_id" /></th>    
-        </tr>
-        <tr>
-            <th>Staff Gender: </th>
-            <th><input type="text" name="staff_gender" /></th>    
-        </tr>
+            <tr>
+              <th>Staff Gender: </th>
+              <th><input type="radio" name="staff_gender" value="F">Female
+              <input type="radio" name="staff_gender" value="M">Male</th>
+          </tr>
         <tr>
             <th>Staff Position: </th>
             <th><input type="text" name="title" /></th>    
