--- a/delete.html
+++ b/delete.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html> 
-
 <html>
-<head>
-<title>Delete data from form</title>
+    <head><link rel="stylesheet" href="uni.css">
+    </head>
+<title>Remove users</title>
 </head>
 <body>
-<form id="myform" method="POST" action="delete.php">
-Name of student: <input type="text" id="stu_fname" name="stu_fname" />
+    <center>
+        <h2>Remove a user</h2>
+<form id="removeForm" method="POST" action="delete.php">
+Login: <input type="text" id="username" name="testname" />
 <input type="submit" value="Submit" name="Submit">
 </form>
+<hr>
+                Copyright &copy; YAHUAS || 
+                 <a href="main.html">Main Menu</a>|| <a href="logout.php?logout">Log-out</a>
+</center>
+
 </body>
 </html>
