--- a/main.html
+++ b/main.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html> 
 <html>
     <head><link rel="stylesheet" href="uni.css">
     </head>
@@ -61,7 +62,7 @@
                         <div class="dropdown-content">
                             <a href="add_courses.html">Create</a>
                             <a href="search_course.html">Manage</a>
-                            <a href="#">Report</a>
+                            <a href="rpt_courses.php">Report</a>
                         </div>
                 </th>
                 <th>
@@ -69,8 +70,8 @@
                         <button class="dropbtn">Student</button>
                         <div class="dropdown-content">
                             <a href="add_student.html">Create</a>
-                            <a href="#">Manage</a>
-                            <a href="#">Report</a>
+                            <a href="search_students.html">Manage</a>
+                            <a href="rpt_student_waiting.php">Report</a>
                         </div>
                 </th>
                 <th>
@@ -78,8 +79,8 @@
                         <button class="dropbtn">Staff</button>
                         <div class="dropdown-content">
                             <a href="add_staff.html">Create</a>
-                            <a href="#">Manage</a>
-                            <a href="#">Report</a>
+                            <a href="update_staff.html">Manage</a>
+                            <a href="rpt_staff_dq.php">Report</a>
                         </div>
                 </th>
                 <th>
@@ -88,7 +89,7 @@
                                 <div class="dropdown-content">
                                     <a href="add_flat.html">Create</a>
                                     <a href="#">Manage</a>
-                                    <a href="#">Report</a>
+                                    <a href="rpt_flat_empty.php">Report</a>
                                 </div>
                         </th>
                 <th>
@@ -105,8 +106,8 @@
                     <button class="dropbtn">Lease</button>
                     <div class="dropdown-content">
                         <a href="add_lease.html">Create</a>
-                        <a href="#">Manage</a>
-                        <a href="#">Report</a>
+                        <a href="unpaid.html">Manage</a>
+                        <a href="rpt_overdue.php">Report</a>
                     </div>  
                 </th>
                 <th>
@@ -115,7 +116,7 @@
                     <div class="dropdown-content">
                         <a href="add_invoice.html">Create</a>
                         <a href="#">Manage</a>
-                        <a href="#">Report</a>
+                        <a href="rpt_unpaid.php">Report</a>
                     </div>  
                 </th>
                 <th>
@@ -124,7 +125,15 @@
                     <div class="dropdown-content">
                         <a href="add_inspection.html">Create</a>
                         <a href="#">Manage</a>
-                        <a href="#">Report</a>
+                        <a href="rpt_failed_insp.php">Report</a>
+                    </div>  
+                </th>
+                <th>
+                    <div class="dropdown">
+                    <button class="dropbtn">Login</button>
+                    <div class="dropdown-content">
+                        <a href="delete.html">Remove users</a>
+
                     </div>  
                 </th>
             </tr>
@@ -134,4 +143,5 @@
         <a href="logout.php?logout">Log-out</a>
         
         </div>
-    </center></html>
+    </center>
+    </html>
