--- a/main.html
+++ b/main.html
@@ -88,7 +88,7 @@
                                 <button class="dropbtn">Flats</button>
                                 <div class="dropdown-content">
                                     <a href="add_flat.html">Create</a>
-                                    <a href="#">Manage</a>
+                                    <a href="flat_rate.html">Manage</a>
                                     <a href="rpt_flat_empty.php">Report</a>
                                 </div>
                         </th>
@@ -97,8 +97,8 @@
                                 <button class="dropbtn">Hall</button>
                                 <div class="dropdown-content">
                                     <a href="add_hall.html">Create</a>
-                                    <a href="#">Manage</a>
-                                    <a href="#">Report</a>
+                                    <a href="hall_rate.html">Manage</a>
+                                    <a href="rpt_hall_empty.php">Report</a>
                                 </div>
                         </th>
                 <th>
@@ -106,8 +106,8 @@
                     <button class="dropbtn">Lease</button>
                     <div class="dropdown-content">
                         <a href="add_lease.html">Create</a>
-                        <a href="unpaid.html">Manage</a>
-                        <a href="rpt_overdue.php">Report</a>
+                        <a href="update_lease_duration.html">Manage</a>
+                        <a href="rpt_no_leave.php">Report</a>
                     </div>  
                 </th>
                 <th>
@@ -115,7 +115,7 @@
                     <button class="dropbtn">Invoice</button>
                     <div class="dropdown-content">
                         <a href="add_invoice.html">Create</a>
-                        <a href="#">Manage</a>
+                        <a href="unpaid.php">Manage</a>
                         <a href="rpt_unpaid.php">Report</a>
                     </div>  
                 </th>
@@ -124,7 +124,7 @@
                     <button class="dropbtn">Inspection</button>
                     <div class="dropdown-content">
                         <a href="add_inspection.html">Create</a>
-                        <a href="#">Manage</a>
+                        <a href="update_inspections.html">Manage</a>
                         <a href="rpt_failed_insp.php">Report</a>
                     </div>  
                 </th>
