--- a/main.html
+++ b/main.html
@@ -130,8 +130,9 @@
                 </th>
                 <th>
                     <div class="dropdown">
-                    <button class="dropbtn">Login</button>
+                    <button class="dropbtn">Users</button>
                     <div class="dropdown-content">
+                        <a href="reset.html">Update password</a>
                         <a href="delete.html">Remove users</a>
 
                     </div>  
