--- a/reset.html
+++ b/reset.html
@@ -1,6 +1,6 @@
 <html>
     <link rel="stylesheet" href="uni.css">
-<form action="login_page.php" method="post">
+<form action="reset.php" method="post">
   <center>
     <H1> Welcome to YAHUAS ONLINE MANAGEMENT SYSTEM </H1>
     <hr>
@@ -14,8 +14,10 @@
 <br>
     <button type="submit">Reset Password</button>
     
-  <hr>
-        Copyright &copy; YAHUAS
+    <hr>
+    Copyright &copy; YAHUAS || 
+     <a href="main.html">Main Menu</a>|| <a href="logout.php?logout">Log-out</a>
+</center>
   </div>
 </center>
 </form>
