--- a/add_hall.html
+++ b/add_hall.html
@@ -11,27 +11,20 @@
 <table style="width:30%">
     <tr>
     <th>Hall No (e.g A1): </th>
-    <th><input type="text" name="hall_no" maxlength="2"/></th> 
+    <th><input type="text" name="hall_no" maxlength="3"/></th> 
   </tr>
         <tr>
           <th>Hall Name:</th>
           <th><input type="text" name="hall_name" maxlength="100"/></th> 
         </tr>
-        <tr>
-          <th>Address:</th>
-          <th><input type="text" name="address" maxlength="100"/></th> 
-        </tr>
-        <tr>
-            <th>Postcode:</th>
-            <th><input type="text" name="postcode", maxlength="8"/></th>
-        </tr>
+  
         <tr>
             <th>Phone:</th>
-            <th><input type="text" name="telno" maxlength="100"/></th>
+            <th><input type="text" name="telno" maxlength="50"/></th>
         </tr>
         <tr>
-            <th>Manager Number:</th>
-            <th><input type="text" name="telno" maxlength="4"/></th>
+            <th>Manager Staff Number:</th>
+            <th><input type="text" name="manager_no" maxlength="4"/></th>
         </tr>
         
 
